# Leaklab

./: .gitignore  BACKLOG.md  CHANGELOG.md  CLAUDE.md  PLANO-TESTE-onda1-icm-hud-multiway.md  README.md  make-daily-posts.sh  render.yaml  vercel.json
.github/workflows/: ci-cd.yml
backend/: CoinPoker_LuigiEnrico_2026-07-01_to_2026-07-03_Tournament.txt  Dockerfile  TS20260630 T35409697 E1266263933 NL Hold’em $0.50 + $0.05.ots  requirements.txt  requirements_dev.txt  requirements_test.txt  run_campaign_hand_aware.cmd  run_solver_consumer.py  tournament_0123456789.txt
backend/api/: app.py
backend/database/: auth.py  repositories.py  schema.py
backend/docs/: app.gtowizard.com.har  coach_review_t27.html  coach_review_t27_spots.json  gto_bot_spec.md  (+7 more)
backend/gto_bot/solver_cli/: BUILD.md  Cargo.toml
backend/gto_bot/solver_cli/src/: main.rs
deploy/: email-setup.md  setup-guide.html
frontend/: .env  index.html  leaklab-replayer-v3.html  leaklab-replayer-v4.html  package-lock.json  package.json  tailwind.config.ts  vercel.json  vite.config.ts
specs/: README.md  acr-parser.md  architecture.md  coach-cockpit.md  coach-dashboard-v2.html  coach-dashboard-v2.md  coach-onboarding-trial.md  decision-pipeline.md  deploy-cloudflare.md  deploy-vps.md  glossary.md  gto-capture.md  invariants.md  pay-01-stripe-audit.md  preflop-gto.md  sec-01-coach-invites.md  solver-improvement-plan.md  solver-rollback.md  training-gamification.md  ux-proposal-2026.html
video/: .gitignore  README.md  avatar_brief.md  heygen_aula1_brief.md  package-lock.json  package.json  tsconfig.json
(+719 files in other folders)
