[package]
name    = "solver_cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "solver_cli"
path = "src/main.rs"

[dependencies]
# bincode desabilitado — não precisamos de file I/O, só do solver CFR
postflop-solver = { git = "https://github.com/b-inary/postflop-solver", default-features = false, features = ["rayon"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto       = true
